<resources>
    <string name="app_name">Egy Guide </string>
    <string name="Name">Enter your Name</string>
    <string name="email">Enter your E-mail</string>
    <string name="pass">Enter your Password</string>
    <string name="rePass">Renter your Password</string>
    <string name="mobile">Enter your Phone</string>
    <string name="so_Signin">Don\'t have account? Create one now!</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="famous_place">Famous place</string>
    <string name="top_place">Top place</string>
    <string name="what_you_by_from_egypt">What you can buy from Egypt?</string>
    <string name="place_name">Place name</string>
    <string name="addres">Address</string>
    <string name="description">Description</string>


    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>

    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="abo_elhole">Sphinx</string>
    <string name="confirm">Confirm</string>
    <string name="old_pass">Old Password</string>
    <string name="app_info">App info :</string>>
      <string name="app_info2">The application is used to display an important landmarks in Egypt, Top places to visit and the things which you can buy from Egypt</string>
    <string name="newpass">Enter New Password</string>
    <string name="renewpass">Re-Enter New Password</string>
</resources>