<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/layout_signUp"
android:background="@drawable/back"
android:layout_width="match_parent"
android:paddingTop="30dp"
android:layout_height="match_parent">
<EditText
    android:id="@+id/et1_name"
    android:layout_width="350dp"
    android:layout_height="70dp"
    android:drawableRight="@drawable/ic_con"
    android:background="@drawable/btn_background"
    android:textSize="24sp"
    android:padding="10dp"
    android:hint="@string/Name"
    app:layout_constraintLeft_toLeftOf="@id/layout_signUp"
    app:layout_constraintRight_toRightOf="@id/layout_signUp"
    app:layout_constraintTop_toTopOf="@id/layout_signUp"
    android:textColorHint="@color/gray700"/>
<EditText
    android:id="@+id/et1_mail"
    android:layout_width="350dp"
    android:layout_height="70dp"
    android:background="@drawable/btn_background"
    android:layout_margin="7dp"
    android:drawableRight="@drawable/ic_email"
    android:textSize="24sp"
    android:padding="10dp"
    android:hint="@string/email"
    app:layout_constraintLeft_toLeftOf="@id/layout_signUp"
    app:layout_constraintRight_toRightOf="@id/layout_signUp"
    app:layout_constraintTop_toBottomOf="@id/et1_name"
    android:textColorHint="@color/gray700"/>

<EditText
    android:id="@+id/et1_phone"
    android:layout_width="350dp"
    android:layout_height="70dp"
    android:background="@drawable/btn_background"
    android:layout_margin="7dp"

    android:drawableRight="@drawable/ic_baseline_phone_24"
    app:layout_constraintLeft_toLeftOf="@id/layout_signUp"
    app:layout_constraintRight_toRightOf="@id/layout_signUp"
    app:layout_constraintTop_toBottomOf="@id/et1_mail"
    android:textSize="24sp"
    android:padding="10dp"
    android:hint="@string/mobile"
    android:textColorHint="@color/gray700"/>

<EditText
    android:id="@+id/et1_pass"
    android:layout_width="350dp"
    android:layout_height="70dp"
    android:drawableRight="@drawable/ic_visible"
    android:background="@drawable/btn_background"
    android:layout_margin="7dp"

    android:textSize="24sp"
    android:padding="10dp"
    android:hint="@string/pass"
    app:layout_constraintLeft_toLeftOf="@id/layout_signUp"
    app:layout_constraintRight_toRightOf="@id/layout_signUp"
    app:layout_constraintTop_toBottomOf="@id/et1_phone"
    android:textColorHint="@color/gray700"/>

<EditText
    android:id="@+id/et1_rePass"
    android:layout_width="350dp"
    android:layout_height="70dp"
    android:drawableRight="@drawable/ic_con"
    android:background="@drawable/btn_background"
    android:layout_margin="7dp"

    android:textSize="24sp"
    android:padding="10dp"
    android:hint="@string/rePass"
    app:layout_constraintLeft_toLeftOf="@id/layout_signUp"
    app:layout_constraintRight_toRightOf="@id/layout_signUp"
    app:layout_constraintTop_toBottomOf="@id/et1_pass"
    android:textColorHint="@color/gray700"/>
<Button
    android:id="@+id/btn_signUp"
    android:layout_marginTop="30dp"
    android:gravity="center"
    android:layout_width="250dp"
    android:layout_height="55dp"
    android:text="@string/btn_signUp"
    android:textColor="@color/gray900"
    android:textSize="24dp"
    android:textStyle="bold|italic"
    android:background="#94E1CBCB"
    app:layout_constraintLeft_toLeftOf="@id/layout_signUp"
    app:layout_constraintRight_toRightOf="@id/layout_signUp"
    app:layout_constraintTop_toBottomOf="@id/et1_rePass"
    />
<TextView
    android:id="@+id/tv1_haveAccount"
    android:layout_width="wrap_content"
    android:layout_height="60dp"
    android:layout_marginTop="64dp"
    android:text="@string/so_Signin"
    android:textColor="@color/gray900"
    android:textSize="24dp"
    android:textStyle="bold|italic"
    app:layout_constraintHorizontal_bias="0.112"
    app:layout_constraintLeft_toLeftOf="@id/layout_signUp"
    app:layout_constraintRight_toRightOf="@id/layout_signUp"
    app:layout_constraintTop_toBottomOf="@id/btn_signUp" />

<Button
    android:id="@+id/btn1_signIn"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:background="#94E1CBCB"
    android:gravity="center"
    android:text="@string/btn_signin"
    android:textColor="@color/gray900"
    android:textSize="24dp"
    android:textStyle="bold|italic"
    app:layout_constraintHorizontal_bias="0.857"
    app:layout_constraintLeft_toLeftOf="@id/layout_signUp"
    app:layout_constraintRight_toRightOf="@id/layout_signUp"
    app:layout_constraintTop_toBottomOf="@id/tv1_haveAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>