<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_signIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingTop="200dp"
    tools:context=".SignIn">

    <EditText
        android:id="@+id/et2_mail"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_margin="7dp"
        android:background="@drawable/btn_background"
        android:drawableRight="@drawable/ic_email"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColorHint="@color/gray700"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/layout_signIn"
        app:layout_constraintRight_toRightOf="@id/layout_signIn"
        app:layout_constraintTop_toTopOf="@id/layout_signIn" />

    <EditText
        android:id="@+id/et2_pass"
        android:inputType="textPassword"

        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_margin="7dp"
        android:background="@drawable/btn_background"

        android:hint="@string/pass"
        android:padding="10dp"
        android:textColorHint="@color/gray700"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/layout_signIn"
        app:layout_constraintRight_toRightOf="@id/layout_signIn"
        app:layout_constraintTop_toBottomOf="@id/et2_mail" />

    <Button
        android:id="@+id/btn2_signIn"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="#94E1CBCB"
        android:gravity="center"
        android:text="@string/btn_signin"
        android:textColor="@color/gray900"
        android:textSize="24dp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="@id/layout_signIn"
        app:layout_constraintRight_toRightOf="@id/layout_signIn"
        app:layout_constraintTop_toBottomOf="@id/et2_pass" />

    <TextView
        android:id="@+id/tv_createAcc"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/so_Signin"
        android:textColor="@color/gray900"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintLeft_toLeftOf="@id/layout_signIn"
        app:layout_constraintRight_toRightOf="@id/layout_signIn"
        app:layout_constraintTop_toBottomOf="@id/btn2_signIn" />

    <Button
        android:id="@+id/btn2_signUp"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="20dp"
        android:background="#94E1CBCB"
        android:text="@string/btn_signUp"
        android:textAllCaps="false"
        android:textColor="@color/gray900"
        android:textSize="24dp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="@id/layout_signIn"
        app:layout_constraintRight_toRightOf="@id/layout_signIn"
        app:layout_constraintTop_toBottomOf="@id/tv_createAcc" />

    <ImageView
        android:id="@+id/show3"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginLeft="272dp"
        android:src="@drawable/ic_baseline_visibility_24"
        app:layout_constraintBottom_toBottomOf="@id/et2_pass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/et2_pass"
        app:layout_constraintRight_toRightOf="@id/layout_signIn"
        app:layout_constraintTop_toTopOf="@id/et2_pass"
        app:layout_constraintVertical_bias="0.466" />


</androidx.constraintlayout.widget.ConstraintLayout>