<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting.Setting"
    android:id="@+id/layout_change_pass"
    android:background="@drawable/backgrond">

    <EditText
        android:id="@+id/et1_mail_change"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edt_background"
        android:drawableRight="@drawable/ic_email"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColorHint="@color/gray700"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/layout_change_pass"
        app:layout_constraintRight_toRightOf="@id/layout_change_pass"
        app:layout_constraintTop_toTopOf="@id/layout_change_pass" />



    <EditText
        android:id="@+id/et1_pass_change"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_margin="7dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edt_background"

        android:hint="@string/pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/gray700"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="@id/layout_change_pass"
        app:layout_constraintRight_toRightOf="@id/layout_change_pass"
        app:layout_constraintTop_toBottomOf="@id/et1_mail_change" />

    <EditText
        android:id="@+id/et1_rePass_change"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_margin="7dp"
        android:background="@drawable/edt_background"
        android:hint="@string/rePass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/gray700"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/layout_change_pass"
        app:layout_constraintRight_toRightOf="@id/layout_change_pass"
        app:layout_constraintTop_toBottomOf="@id/et1_pass_change" />


    <Button
        android:id="@+id/btn1_confirm_change"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="#94E1CBCB"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/gray900"
        android:textSize="24dp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="@id/layout_change_pass"
        app:layout_constraintRight_toRightOf="@id/layout_change_pass"
        app:layout_constraintTop_toBottomOf="@id/et1_rePass_change" />

    <ImageView
        android:id="@+id/show_current_pass"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginLeft="272dp"
        android:src="@drawable/ic_baseline_visibility_24"
        app:layout_constraintBottom_toBottomOf="@id/et1_rePass_change"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/et1_rePass_change"
        app:layout_constraintRight_toRightOf="@id/layout_change_pass"
        app:layout_constraintTop_toTopOf="@id/et1_rePass_change"
        app:layout_constraintVertical_bias="0.466" />

    <ImageView
        android:id="@+id/show2_current_pass"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginLeft="272dp"
        android:src="@drawable/ic_baseline_visibility_24"
        app:layout_constraintBottom_toBottomOf="@id/et1_pass_change"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/et1_pass_change"
        app:layout_constraintRight_toRightOf="@id/layout_change_pass"
        app:layout_constraintTop_toTopOf="@id/et1_pass_change"
        app:layout_constraintVertical_bias="0.466" />


</androidx.constraintlayout.widget.ConstraintLayout>