<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Product.Product_buy">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue">

        <TextView
            android:id="@+id/titel_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_name"
            android:textSize="20dp"

            android:textColor="@color/white"
            />

    </Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <ImageView
                android:id="@+id/image2_product"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:scaleType="fitXY"

                android:src="@drawable/ic_baseline_location_on_24"
                android:layout_gravity="center"/>


            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bord"
                android:padding="10dp">



                <TextView
                    android:textColor="@color/blue"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:fontFamily="@font/alegreya_italic"
                    android:layout_marginTop="2dp"/>
                <TextView
                    android:id="@+id/txt2_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textSize="15dp"
                    android:textColor="@color/gray900"
                    android:layout_marginTop="2dp"/>

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:background="@color/blue"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    />


                <TextView
                    android:textColor="@color/blue"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/txt2_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="15dp"
                    android:textColor="@color/gray900"
                    android:layout_marginTop="2dp"/>

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:background="@color/blue"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:textColor="@color/blue"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/txt2_product_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="15dp"
                    android:textColor="@color/gray900"
                    android:layout_marginTop="2dp"/>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>